# Generated by Django 6.0.7 on 2026-08-22 17:41

import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Categoria',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=100, unique=True)),
                ('descricao', models.TextField(blank=True)),
                ('slug', models.SlugField(blank=True, max_length=120, unique=True)),
            ],
            options={
                'verbose_name': 'Categoria',
                'verbose_name_plural': 'Categorias',
                'ordering': ['nome'],
            },
        ),
        migrations.CreateModel(
            name='ArtigoBlog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(max_length=180)),
                ('slug', models.SlugField(blank=True, max_length=210, unique=True)),
                ('resumo', models.TextField(blank=True)),
                ('conteudo', models.TextField()),
                ('imagem_url', models.URLField(blank=True, verbose_name='URL da imagem')),
                ('tempo_leitura', models.PositiveIntegerField(default=5, verbose_name='Tempo de leitura em minutos')),
                ('status', models.CharField(choices=[('rascunho', 'Rascunho'), ('publicado', 'Publicado')], default='publicado', max_length=20)),
                ('data_publicacao', models.DateTimeField(default=django.utils.timezone.now)),
                ('data_atualizacao', models.DateTimeField(auto_now=True)),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='artigos_blog', to=settings.AUTH_USER_MODEL)),
                ('categoria', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='artigos', to='blog.categoria')),
            ],
            options={
                'verbose_name': 'Artigo do Blog',
                'verbose_name_plural': 'Artigos do Blog',
                'ordering': ['-data_publicacao'],
            },
        ),
    ]
