# Generated by Django 6.0.7 on 2026-08-22 17:41

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Pet',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=100)),
                ('especie', models.CharField(choices=[('Cachorro', 'Cachorro'), ('Gato', 'Gato'), ('Pássaro', 'Pássaro'), ('Peixe', 'Peixe'), ('Roedor', 'Roedor'), ('Réptil', 'Réptil'), ('Outro', 'Outro')], max_length=50)),
                ('sexo', models.CharField(choices=[('Macho', 'Macho'), ('Fêmea', 'Fêmea')], max_length=10)),
                ('raca', models.CharField(max_length=50)),
                ('data_nascimento', models.DateField()),
                ('pelagem', models.CharField(max_length=50)),
                ('peso', models.DecimalField(decimal_places=2, max_digits=10)),
                ('foto', models.ImageField(blank=True, null=True, upload_to='pets/fotos/')),
                ('alergias', models.TextField(blank=True)),
                ('doencas', models.TextField(blank=True)),
                ('medicamentos', models.TextField(blank=True)),
                ('observacoes', models.TextField(blank=True)),
                ('data_atualizacao_saude', models.DateTimeField(auto_now=True)),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pets', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Pet',
                'verbose_name_plural': 'Pets',
            },
        ),
    ]
